--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "description": "npm init template for bootstraping an empty Colyseus project",
   "main": "lib/index.js",
   "scripts": {
-    "start": "ts-node-dev server/index.ts",
-    "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:ui": "parcel ui/index.html"
+    "start:app": "nodemon --watch app -e ts --exec \"ts-node app/index.ts\"",
+    "build:app": "tsc -p tsconfig.json",
+    "start:dash": "parcel dash/index.html",
+    "build:dash": "parcel build dash/index.html",
+    "clean": "rimraf ./dist ./app",
+    "start": "concurrently --kill-others-on-fail --handle-input \"npm run start:app\" \"npm run start:dash\"",
+    "bundle": "npm run clean && npm run build:app && npm run build:dash && ncp dist/ app/public"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -24,7 +27,8 @@
     "@colyseus/loadtest": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
-    "parcel": "^1.12.4",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^3.4.5"
