--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "strictNullChecks": false,
     "esModuleInterop": true,
     "experimentalDecorators": true
-  }
+  },
+  "exclude": [
+    "./dash"
+  ]
 }
