--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:dash": "parcel build dash/index.html",
     "clean": "rimraf ./dist ./app",
     "start": "concurrently --kill-others-on-fail --handle-input \"npm run start:app\" \"npm run start:dash\"",
-    "bundle": "npm run clean && npm run build:app && npm run build:dash && ncp dist/ app/public"
+    "bundle": "npm run clean && npm run build:app && npm run build:dash && ncp dist/ app/public",
+    "lint-js": "eslint --ext .js --report-unused-disable-directives --cache --cache-location out/ .",
+    "fix-js": "npm run lint-js -- --fix"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -27,7 +29,11 @@
     "@colyseus/loadtest": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "concurrently": "^5.3.0",
+    "eslint": "^7.12.1",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.6",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
